# wgpu-rust-renderer

./: Cargo.toml
res/: anim_data.json  mesh_data.json
src/: app.rs  camera.rs  gltf_loader.rs  input.rs  light.rs  main.rs  model.rs  model_shader.rs  model_shader.wgsl  obj_loader.rs  renderer.rs  shader.rs  simple_shader.wgsl  testing.rs  texture.rs  transform.rs  vertex.rs  window.rs
