[package]
name = "rust_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.1"
gltf = "1.4.0"
image = "0.24.8"
pollster = "0.3.0"
raw-window-handle = "0.5.0"
serde_json = "1.0.111"
tobj = { version = "4.0.0", features = ["async"] }
wgpu = "0.18.0"
winit = "0.28"
